data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_515.wast
;; 6. Create a test where a `loop` contains a `br_if` whose condition stack height is improperly set. Validate `WebAssembly` catches the error using `require` while `wizard_engine` misinterprets and results in an infinite loop.

(assert_invalid 
  (module 
    (func $test 
      (loop (block (br_if 1 (i32.const 1)))
    )
  )) 
  "type mismatch"
)